[project]
name = "megasuperdupertz"
version = "0.1.0"
description = "Some bot"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.21.0",
    "alembic>=1.16.4",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.42",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
]
